--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ docker-desktop-4.18.0-amd64.deb
 2_docker_sql/ny_taxis/prueba_2_notebook_2/yellow_tripdata_2021-01.csv
 * .csv
 2_docker_sql/ny_taxis/prueba_2_notebook/yellow_tripdata_2021-01.csv
+2_docker_sql/ny_taxis/prueba_1/ny_taxi_progres_data
+2_docker_sql/ny_taxis/prueba_1/~
