--- a/2_docker_sql/ny_taxis/prueba_3_pg_admin/docker.yaml
+++ b/2_docker_sql/ny_taxis/prueba_3_pg_admin/docker.yaml
@@ -34,4 +34,37 @@ docker run -it \
     -p 5432:5432 \
     postgres:13
 
-        
+
+docker run -it \
+    -e POSTGRES_USER=root \
+    -e POSTGRES_PASSWORD=root \
+    -e POSTGRES_DB="ny_taxi" \
+    -v /home/alourido/Escritorio/data-engineering-zoomcamp/data_zoomcamp/2_docker_sql/ny_taxis/prueba_1/ny_taxi_progres_data:/var/lib/protgresql/data \
+    -p 5432:5432 \
+    postgres:13
+
+docker run -it \
+  -e PGADMIN_DEFAULT_EMAIL="admin@admin.com" \
+  -e PGADMIN_DEFAULT_PASSWORD="root" \
+  -p 8080:80 \
+  dpage/pgadmin4
+
+## network 
+
+docker run -it \
+  -e PGADMIN_DEFAULT_EMAIL="admin@admin.com" \
+  -e PGADMIN_DEFAULT_PASSWORD="root" \
+  -p 8080:80 \
+  --nework=pg-network\
+  --name pgadmin\
+  dpage/pgadmin4
+
+docker run -it \
+    -e POSTGRES_USER=root \
+    -e POSTGRES_PASSWORD=root \
+    -e POSTGRES_DB="ny_taxi" \
+    -v /home/alourido/Escritorio/data-engineering-zoomcamp/data_zoomcamp/2_docker_sql/ny_taxis/prueba_1/ny_taxi_progres_data:/var/lib/protgresql/data \
+    -p 5432:5432 \
+    --network=pg-network\
+    --name pg-database\
+    postgres:13
