--- a/2_docker_sql/ny_taxis/prueba_2_notebook/docker.yaml
+++ b/2_docker_sql/ny_taxis/prueba_2_notebook/docker.yaml
@@ -34,4 +34,11 @@ docker run -it \
     -p 5432:5432 \
     postgres:13
 
-        
+
+docker run -it \
+    -e POSTGRES_USER=root \
+    -e POSTGRES_PASSWORD=root \
+    -e POSTGRES_DB="ny_taxi" \
+    -v /home/alourido/Escritorio/data-engineering-zoomcamp/data_zoomcamp/2_docker_sql/ny_taxis/prueba_1/ny_taxi_progres_data:/var/lib/protgresql/data \
+    -p 5432:5432 \
+    postgres:13
